--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,8 @@ cmake_minimum_required(VERSION 3.0.0)
 project(C C)
 
 add_subdirectory(algorithm/base16)
-add_subdirectory(algorithm/BCC)
-add_subdirectory(algorithm/URL)
+add_subdirectory(algorithm/bcc)
+add_subdirectory(algorithm/url)
 add_subdirectory(algorithm/chinese-calendar)
 
-add_subdirectory(library/qrencode)
-
+#add_subdirectory(library/qrencode)
