--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - run:  brew update
       - run:  brew install cmake tree
 
-      - run:  cmake -S . -B   build.d -DCMAKE_INSTALL_PREFIX=./output
+      - run:  cmake -S . -B   build.d -DCMAKE_INSTALL_PREFIX=./output -DBUILD_TESTING=ON -DCMAKE_COLOR_MAKEFILE=ON
       - run:  cmake --build   build.d
       - run:  cmake --install build.d
       - run:  tree output
@@ -37,7 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@main
 
-      - run:  choco update
+      - run:  choco upgrade
       - run:  choco install -y cmake tree
 
       - run:  cmake -S . -B   build.d -DCMAKE_INSTALL_PREFIX=./output
