--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ add_subdirectory(algorithm/bcc)
 add_subdirectory(algorithm/url)
 add_subdirectory(algorithm/chinese-calendar)
 
+add_subdirectory(library/openssl/SHA-256)
 #add_subdirectory(library/qrencode)
