--- a/algorithm/base16/src/lib/base16Config.cmake.in
+++ b/algorithm/base16/src/lib/base16Config.cmake.in
@@ -9,9 +9,4 @@ set_and_check(BASE16_INSTALL_DIR "${PACKAGE_PREFIX_DIR}")
 set_and_check(BASE16_INCLUDE_DIR "${PACKAGE_PREFIX_DIR}/include")
 set_and_check(BASE16_LIBRARY_DIR "${PACKAGE_PREFIX_DIR}/lib")
 
-include("${CMAKE_CURRENT_LIST_DIR}/base16-sharedTargets.cmake")
-include("${CMAKE_CURRENT_LIST_DIR}/base16-staticTargets.cmake")
-
-set(BASE16_LIBRARY_SHARED base16::shared)
-set(BASE16_LIBRARY_STATIC base16::static)
-set(BASE16_LIBRARY        base16::static)
+include("${CMAKE_CURRENT_LIST_DIR}/base16Targets.cmake")
