--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,5 @@ add_subdirectory(algorithm/url)
 add_subdirectory(algorithm/chinese-calendar)
 
 add_subdirectory(library/openssl/SHA-256)
+add_subdirectory(library/libcurl)
 #add_subdirectory(library/qrencode)
