--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_subdirectory(algorithm/chinese-calendar)
 
 add_subdirectory(library/openssl/SHA-256)
 add_subdirectory(library/libcurl)
+add_subdirectory(library/libarchive)
 #add_subdirectory(library/qrencode)
