--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,4 @@ add_subdirectory(library/cJSON)
 add_subdirectory(library/libyaml)
 add_subdirectory(library/libcurl)
 add_subdirectory(library/libarchive)
-#add_subdirectory(library/qrencode)
+add_subdirectory(library/qrencode)
