--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,6 @@ add_subdirectory(library/openssl/SHA-256)
 add_subdirectory(library/cJSON)
 add_subdirectory(library/libyaml)
 add_subdirectory(library/libcurl)
+add_subdirectory(library/libgit2)
 add_subdirectory(library/libarchive)
 add_subdirectory(library/qrencode)
