--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       - run:  brew install cmake
       - run:  brew install tree
       - run:  brew install curl
+      - run:  brew install libgit2
       - run:  brew install openssl
       - run:  brew install libyaml
       - run:  brew install libarchive
