--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,13 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    env:
-      VCPKG_ROOT: ~/.vcpkg/root
-
     steps:
       - uses: actions/checkout@main
 
       - run:  brew update
       - run:  brew install cmake ninja tree
 
+      - run:  echo "VCPKG_ROOT='$HOME/.vcpkg/root'" >> "GITHUB_ENV"
       - run:  install -d $VCPKG_ROOT
       - run:  git clone https://github.com/microsoft/vcpkg.git $VCPKG_ROOT
 
