--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
       - run:  install -d $VCPKG_ROOT
       - run:  git clone https://github.com/microsoft/vcpkg.git $VCPKG_ROOT
 
+      - run: |
+          if [ "$(uname)" = Linux ] ; then
+              brew install linux-headers
+          fi
+
       - run:  vcpkg install curl libyaml libgit2 libarchive libqrencode cunit
 
       - run:  cmake --version
