--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,22 @@ if (MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 endif()
 
+if (DEFINED VCPKG_INSTALLED_DIR)
+    set(CMAKE_C_FLAGS              "-L${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib ${CMAKE_C_FLAGS}")
+    list(INSERT CMAKE_INCLUDE_PATH 0 "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include")
+    list(INSERT CMAKE_LIBRARY_PATH 0 "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib")
+endif()
+
+message(STATUS "CMAKE_PREFIX_PATH    = ${CMAKE_PREFIX_PATH}")
+message(STATUS "CMAKE_INCLUDE_PATH   = ${CMAKE_INCLUDE_PATH}")
+message(STATUS "CMAKE_LIBRARY_PATH   = ${CMAKE_LIBRARY_PATH}")
+message(STATUS "CMAKE_FIND_ROOT_PATH = ${CMAKE_FIND_ROOT_PATH}")
+
+if (ENABLE_TESTING)
+    include(cmake/modules/FindCUnit.cmake)
+    find_library(CUnit REQUIRED)
+endif()
+
 add_subdirectory(algorithm/base16)
 add_subdirectory(algorithm/bcc)
 add_subdirectory(algorithm/url)
