--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [12, 11]
+        version: [14, 13, 12]
 
     runs-on: macos-${{ matrix.version }}
 
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tag: [20.04, 22.04]
+        tag: [24.04, 22.04]
 
     runs-on:   ubuntu-latest
     container: ubuntu:${{ matrix.tag }}
