--- a/.github/workflows/vcpkg-macos.yml
+++ b/.github/workflows/vcpkg-macos.yml
@@ -35,3 +35,4 @@ jobs:
       - run:  cmake --build   build.d
       - run:  cmake --install build.d
       - run:  tree output
+      - run:  output/self_exe_path
