--- a/.github/workflows/vcpkg-ubuntu.yml
+++ b/.github/workflows/vcpkg-ubuntu.yml
@@ -40,3 +40,4 @@ jobs:
       - run:  cmake --build   build.d
       - run:  cmake --install build.d
       - run:  tree output
+      - run:  output/self_exe_path
