--- a/.github/workflows/netbsd.yml
+++ b/.github/workflows/netbsd.yml
@@ -20,6 +20,9 @@ jobs:
 
       - run: curl -LO https://curl.se/ca/cacert.pem
 
+      - run: curl -LO https://raw.githubusercontent.com/leleliu008/ppkg/master/ppkg
+      - run: chmod a+x ppkg
+
       - uses: cross-platform-actions/action@master
         with:
           operating_system: netbsd
