--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - run: curl -LO https://raw.githubusercontent.com/leleliu008/ppkg/master/ppkg
+      - run: chmod a+x ppkg
+
       - uses: cross-platform-actions/action@master
         with:
           operating_system: openbsd
