--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -37,3 +37,4 @@ jobs:
             run ./ppkg update
             run ./ppkg install c-examples
             run ~/.ppkg/installed/freebsd-${{ matrix.freebsd-version }}-amd64/c-examples/bin/self_exe_path
+            run ~/.ppkg/installed/freebsd-${{ matrix.freebsd-version }}-amd64/c-examples/bin/getexepath
