--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -37,3 +37,4 @@ jobs:
             run ./ppkg update
             run ./ppkg install c-examples
             run ~/.ppkg/installed/openbsd-${{ matrix.openbsd-version }}-amd64/c-examples/bin/self_exe_path
+            run ~/.ppkg/installed/openbsd-${{ matrix.openbsd-version }}-amd64/c-examples/bin/getexepath
