--- a/.github/workflows/vcpkg-ubuntu.yml
+++ b/.github/workflows/vcpkg-ubuntu.yml
@@ -41,3 +41,4 @@ jobs:
       - run:  cmake --install build.d
       - run:  tree output
       - run:  output/bin/self_exe_path
+      - run:  output/bin/getexepath
