--- a/utils/self_exe_path/CMakeLists.txt
+++ b/utils/self_exe_path/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 ########################################################################################
 
 add_executable(self_exe_path main.c self.c)
+add_executable(getexepath getexepath.c)
 
 ########################################################################################
 
